# AuToMATo

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
automato/: __init__.py  automato.py  persistent_entropy.py
bottleneck_bootstrap/: __init__.py  bottleneck_bootstrap.py
dataset_utils/: __init__.py  plotting.py  sampling.py
eval/: benchmarks_without_noise.json  eval.py
eval/finch_subclassed/: finch_subclassed.py
eval/ttk_subclassed/: ttk_aux.py  ttk_subclassed.py
mapper_applications/: chemdiab.csv  eccentricity_subclassed.py  make_diabetes_pictures.py  make_synth_pictures.py
persistence_plotting/: __init__.py  cs_wong.py  persistence_plotting.py
