[project]
name = "automato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gudhi==3.9.0",
    "igraph==0.11.5",
    "joblib==1.4.2 ; python_full_version >= '3.8'",
    "numpy==1.26.4",
    "packaging==24.0 ; python_full_version >= '3.7'",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "pytz==2024.1",
    "scikit-learn==1.5.0",
    "scipy==1.13.0 ; python_full_version >= '3.9'",
    "six==1.16.0 ; python_full_version >= '2.7'",
    "tenacity==8.3.0 ; python_full_version >= '3.8'",
    "texttable==1.7.0",
    "threadpoolctl==3.5.0 ; python_full_version >= '3.8'",
    "tzdata==2024.1 ; python_full_version >= '2'",
]

[dependency-groups]
dev = [
    "asttokens==2.4.1",
    "clustering-benchmarks==1.1.4",
    "comm==0.2.2 ; python_full_version >= '3.8'",
    "contourpy==1.2.1 ; python_full_version >= '3.9'",
    "cycler==0.12.1 ; python_full_version >= '3.8'",
    "cython==3.0.10 ; python_full_version >= '2.7'",
    "decorator==5.1.1 ; python_full_version >= '3.5'",
    "exceptiongroup==1.2.1 ; python_full_version < '3.11'",
    "executing==2.0.1 ; python_full_version >= '3.5'",
    "finch-clust==0.2.0",
    "fonttools==4.51.0 ; python_full_version >= '3.8'",
    "genieclust==1.1.5",
    "giotto-ph==0.2.2",
    "giotto-tda==0.6.0",
    "gudhi==3.9.0",
    "igraph==0.11.5",
    "ipython==8.24.0 ; python_full_version >= '3.10'",
    "ipywidgets==8.1.2 ; python_full_version >= '3.7'",
    "jedi==0.19.1 ; python_full_version >= '3.6'",
    "joblib==1.4.2 ; python_full_version >= '3.8'",
    "jupyterlab-widgets==3.0.10 ; python_full_version >= '3.7'",
    "kaleido==0.2.1",
    "kiwisolver==1.4.5 ; python_full_version >= '3.7'",
    "matplotlib==3.9.0 ; python_full_version >= '3.9'",
    "matplotlib-inline==0.1.7 ; python_full_version >= '3.8'",
    "natsort==8.4.0 ; python_full_version >= '3.7'",
    "numpy==1.26.4",
    "packaging==24.0 ; python_full_version >= '3.7'",
    "pandas==2.2.2",
    "parso==0.8.4 ; python_full_version >= '3.6'",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==10.3.0 ; python_full_version >= '3.8'",
    "plotly==5.22.0",
    "prompt-toolkit==3.0.43 ; python_full_version >= '3.7'",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyflagser==0.4.5",
    "pygments==2.18.0 ; python_full_version >= '3.8'",
    "pyparsing==3.1.2 ; python_full_version >= '3.6.8'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "pytz==2024.1",
    "scikit-learn==1.5.0",
    "scipy==1.13.0 ; python_full_version >= '3.9'",
    "six==1.16.0 ; python_full_version >= '2.7'",
    "stack-data==0.6.3",
    "tenacity==8.3.0 ; python_full_version >= '3.8'",
    "texttable==1.7.0",
    "threadpoolctl==3.5.0 ; python_full_version >= '3.8'",
    "traitlets==5.14.3 ; python_full_version >= '3.8'",
    "typing-extensions==4.11.0 ; python_full_version < '3.12'",
    "tzdata==2024.1 ; python_full_version >= '2'",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.10 ; python_full_version >= '3.7'",
]
